# ClangBuildAnalyzer

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  ClangBuildAnalyzer.ini  readme.md
.github/workflows/: main.yml
projects/make/: Makefile
projects/vs2017/: ClangBuildAnalyzer.vcxproj  ClangBuildAnalyzer.vcxproj.filters
projects/vs2019/: ClangBuildAnalyzer.sln  ClangBuildAnalyzer.vcxproj  ClangBuildAnalyzer.vcxproj.filters
projects/xcode/ClangBuildAnalyzer.xcodeproj/: project.pbxproj
projects/xcode/ClangBuildAnalyzer.xcodeproj/xcshareddata/xcschemes/: ClangBuildAnalyzer.xcscheme
src/: Allocator.cpp  Analysis.cpp  Analysis.h  Arena.cpp  Arena.h  BuildEvents.cpp  BuildEvents.h  Colors.cpp  Colors.h  Utils.cpp  Utils.h  main.cpp
tests/blender-mac-clang14/: IO_wavefront_obj.json  _AnalysisOutputExpected.txt  importer_mesh_utils.json  obj_export_file_writer.json  obj_export_mesh.json  obj_export_mtl.json  obj_export_nurbs.json  obj_exporter.json  obj_import_file_reader.json  obj_import_mesh.json  obj_import_mtl.json  obj_import_nurbs.json  obj_import_string_utils.json  obj_importer.json
tests/clang-cl-9.0/: Allocator.json  Utils.json  _AnalysisOutputExpected.txt
tests/clang11-pid-45/: _AnalysisOutputExpected.txt  test.json
tests/hlsl2glsl-mac-clang-10.0-dev/: _AnalysisOutputExpected.txt  _TraceOutputExpected.json  glslCommon.json  glslFunction.json  glslOutput.json  hlslLinker.json
tests/libreoffice-skiahelper-clang-11-dev/: SkiaHelper.json  _AnalysisOutputExpected.txt  _TraceOutputExpected.json
tests/self-win-clang-13.0/: Analysis.json  Arena.json  BuildEvents.json  _AnalysisOutputExpected.txt  main.json  produceJsonFiles.cmd
tests/self-win-clang-16.0/: BuildEvents.json  _AnalysisOutputExpected.txt  main.json  produceJsonFiles.cmd
tests/self-win-clang-19.1/: BuildEvents.json  _AnalysisOutputExpected.txt  main.json  produceJsonFiles.cmd
tests/self-win-clang-cl-10.0rc2/: Allocator.json  BuildEvents.json  _AnalysisOutputExpected.txt  _TraceOutputExpected.json  main.json
tests/self-win-clang-cl-9.0rc2/: Colors.json  _AnalysisOutputExpected.txt  _TraceOutputExpected.json
tests/verylong-symbol-name-38/: _AnalysisOutputExpected.txt  test.json
